[touch: 1595] Added possibility to update schedule
